[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/GUI/EscMenu.gd" type="Script" id=1]

[sub_resource type="VisualShader" id=1]

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[node name="EscMenu" type="Control"]
material = SubResource( 2 )
margin_right = 1020.0
margin_bottom = 600.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0.945098, 0.945098, 0.945098, 1 )
margin_left = 300.0
margin_top = 130.0
margin_right = 705.0
margin_bottom = 380.0

[node name="QuitButton" type="Button" parent="Panel"]
margin_left = 90.0
margin_top = 190.0
margin_right = 316.0
margin_bottom = 237.0
text = "Quit"

[node name="BackToMainMenu" type="Button" parent="Panel"]
margin_left = 90.0
margin_top = 120.0
margin_right = 316.0
margin_bottom = 170.0
text = "Back to Main Menu"

[node name="ResumeGame" type="Button" parent="Panel"]
margin_left = 90.0
margin_top = 50.0
margin_right = 316.0
margin_bottom = 100.0
text = "Resume"

[node name="Playername" type="Label" parent="Panel"]
margin_left = 160.0
margin_top = 14.0
margin_right = 241.0
margin_bottom = 28.0
text = "Player Name"
align = 1
valign = 3

[connection signal="pressed" from="Panel/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="Panel/BackToMainMenu" to="." method="_on_BackToMainMenu_pressed"]
[connection signal="pressed" from="Panel/ResumeGame" to="." method="_on_ResumeGame_pressed"]
